integration template, crud speciality & activate user

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -48,19 +48,13 @@
                                     Connecter
                                 </button>
 
-                                <!--
-                                                                <div class="pull-left">
-                                                                    <h6>
-                                                                        <a href="#pablo" class="link footer-link">Creer un compte</a>
-                                                                    </h6>
-                                                                </div>
-                                                                <div class="pull-right">
-                                                                    <h6>
-                                                                        <a href="#pablo" class="link footer-link">Besoin  d'aide?</a>
-                                                                    </h6>
-                                                                </div>
 
-                                -->
+                                <div class="pull-left">
+                                    <h6>
+                                        <a th:href="@{/account/sign-up}" class="link footer-link">Creer un compte</a>
+                                    </h6>
+                                </div>
+
                                </div>
                         </div>
                     </form>
