--- a/src/main/resources/templates/fragments/fragment_footer.html
+++ b/src/main/resources/templates/fragments/fragment_footer.html
@@ -27,8 +27,8 @@
             <script>
                 document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
             </script>, Designed by
-            <a href="#" target="_blank">Djepay</a>. by
-            <a href="#" target="_blank">Ivoire software</a>.
+            <a href="#" target="_blank">Artisan</a>. by
+            <a href="#" target="_blank">Cedric Akrou</a>.
         </div>
     </div>
 </footer>
