--- a/src/main/resources/templates/fragments/fragment_sidebar.html
+++ b/src/main/resources/templates/fragments/fragment_sidebar.html
@@ -4,7 +4,7 @@
     -->
     <div class="logo">
         <a href="" class="simple-text logo-normal">
-            DJEPAY
+            ARTISAN'
         </a>
 
 
@@ -22,8 +22,6 @@
 
             <a href="" class="simple-text logo-normal" th:text="${user.username  + ' - ' + user.function }"> </a>
 
-            <a href="" class="simple-text logo-normal" th:text="${ 'SOLDE: ' + #numbers.formatDecimal(user.balance, 1, 'DEFAULT', 2, 'DEFAULT')}" > </a>
-
         </div>
 
 
@@ -32,148 +30,54 @@
 
                 <div th:unless="${user.firstConnection}">
 
-                    <li>
-                        <a th:href="@{/backend}">
-                            <i class="now-ui-icons design_app"></i>
-                            <p>Dashboard</p>
-                        </a>
-                    </li>
+                <li>
+                    <a th:href="@{/backend}">
+                        <i class="now-ui-icons design_app"></i>
+                        <p>Dashboard</p>
+                    </a>
+                </li>
 
-                    <!-- ACTUATOR -->
+                 <!-- ADMIN -->
 
-                    <li th:if="${user.actuator}">
-                        <a th:href="@{/backend/profil/actuator}">
-                            <i class="now-ui-icons users_single-02"></i>
-                            <p>Mon Profil</p>
-                        </a>
-                    </li>
-
-
-                    <!-- EMPLOYEES -->
-
-                    <!-- PDG -->
-
-                    <li th:if="${user.pdg}">
-                        <a th:href="@{/backend/pdg/manage-agencies}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Management des agences</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.pdg}">
-                        <a th:href="@{/backend/pdg/manage-employees}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Management des users</p>
-                        </a>
-                    </li>
-
-                    <!-- CHIEF AGENCY -->
-
-                    <li th:if="${user.chiefAgency}">
-                        <a th:href="@{/backend/employees/manage-employees}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Management des users</p>
-                        </a>
-                    </li>
+                <li th:if="${user.admin}">
+                    <a th:href="@{/backend/admin/artisans}">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Artisans</p>
+                    </a>
+                </li>
 
 
-                    <!-- CUSTOMER MANAGER-->
+                <li th:if="${user.admin}">
+                    <a th:href="@{/backend/admin/announcements}">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Annonces</p>
+                    </a>
+                </li>
 
-                    <li th:if="${user.customerManager}">
-                        <a th:href="@{/backend/employees/manage-distributor}">
-                            <i class="now-ui-icons users_single-02"></i>
-                            <p>Revendeur</p>
-                        </a>
-                    </li>
+                <li th:if="${user.admin}">
+                    <a th:href="@{/backend/admin/specialities}">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Secteur d'activité</p>
+                    </a>
+                </li>
 
-                    <li th:if="${user.customerManager}">
-                        <a th:href="@{/backend/employees/manage-client}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Client</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.customerManager}">
-                        <a th:href="@{/backend/employees/manage-code-voucher}">
-                            <i class="now-ui-icons transportation_air-baloon"></i>
-                            <p>Code Voucher</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.customerManager}">
-                        <a th:href="@{/backend/employees/history-code-voucher}">
-                            <i class="now-ui-icons education_agenda-bookmark"></i>
-                            <p>Historique Code Voucher</p>
-                        </a>
-                    </li>
+                <li th:if="${user.admin}">
+                    <a th:href="@{/backend/admin/clients}">
+                        <i class="now-ui-icons users_single-02"></i>
+                        <p>Clients</p>
+                    </a>
+                </li>
 
 
-                    <!--- General employees -->
-
-                    <li th:if="${user.employees}">
-                        <a th:href="@{/backend/employees/my-history}">
-                            <i class="now-ui-icons education_agenda-bookmark"></i>
-                            <p>Mon Historique</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.employees}">
-                        <a th:href="@{/backend/employees/profile}">
-                            <i class="now-ui-icons users_single-02"></i>
-                            <p>Mon Profil</p>
-                        </a>
-                    </li>
+                <!-- END ADMIN -->
 
 
-                    <!-- DISTRIBUTOR -->
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/manage-code-voucher}">
-                            <i class="now-ui-icons transportation_air-baloon"></i>
-                            <p>Code Voucher</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/reload-client}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Client</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/manage-withdrawal}">
-                            <i class="now-ui-icons emoticons_satisfied"></i>
-                            <p>Historique ordre de Retrait</p>
-                        </a>
-                    </li>
-
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/my-history}">
-                            <i class="now-ui-icons education_agenda-bookmark"></i>
-                            <p>Mon Historique</p>
-                        </a>
-                    </li>
-
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/history-code-voucher}">
-                            <i class="now-ui-icons education_agenda-bookmark"></i>
-                            <p>Historique Code Voucher</p>
-                        </a>
-                    </li>
-
-                    <li th:if="${user.distributor}">
-                        <a th:href="@{/backend/distributor/profile}">
-                            <i class="now-ui-icons users_single-02"></i>
-                            <p>Mon Profil</p>
-                        </a>
-                    </li>
-
-                </div>
-
-
+                <li>
+                    <a th:href="@{/backend/profil/}">
+                        <i class="now-ui-icons user-profile"></i>
+                        <p>Mon Profil</p>
+                    </a>
+                </li>
 
                 <li>
                     <a th:href="@{/account/logout}">
