--- a/src/main/resources/templates/service/email/sign-up-step-one.html
+++ b/src/main/resources/templates/service/email/sign-up-step-one.html
@@ -175,7 +175,7 @@
                 </tr>
                 <tr>
                     <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">A votre santé,<br>Djepay team</p>
+                        <p style="margin: 0;">A votre santé,<br>Cedric Akrou</p>
                     </td>
                 </tr>
             </table>
