--- a/src/main/resources/templates/service/email/send-code-template.html
+++ b/src/main/resources/templates/service/email/send-code-template.html
@@ -131,48 +131,11 @@
             <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                 <tr>
                     <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">Nous sommes ravis de vous voir commencer. Tout d'abord, vous devez confirmer votre compte. Appuyez simplement sur le bouton ci-dessous.</p>
-                        <p style="margin-bottom: 10px;">Vos identifiants de connexion sont les suivants: </p>
-                        <p style="margin-left: 5px;"> Username :  <span th:text="${user.username}"> </span>  </p>
-                        <p style="margin-left: 5px;"> Password :  <span th:text="${user.password}"> </span>  </p>
+                        <p style="margin: 0;">Nous sommes ravis de vous revoir.</p>
+                        <p style="margin-left: 5px;"> Code de confirmation :  <span th:text="${code}"> </span>  </p>
                     </td>
                 </tr>
-                <tr>
-                    <td bgcolor="#ffffff" align="left">
-                        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
-                                    <table border="0" cellspacing="0" cellpadding="0">
-                                        <tr>
-                                            <td align="center" style="border-radius: 3px;" bgcolor="#ff3b3b">
-                                                <a th:href="${link}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #ff3b3b; display: inline-block;">
-                                                    Confirmer votre compte
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr> <!-- COPY -->
-                <tr>
-                    <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">Si cela ne fonctionne pas, copiez et collez le lien suivant dans votre navigateur:</p>
-                    </td>
-                </tr> <!-- COPY -->
-                <tr>
-                    <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">
-                            <a href="#" target="_blank" style="color: #ff3b3b;" th:text="${link}"></a>
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                        <p style="margin: 0;">Si vous avez des questions, répondez simplement à cet e-mail. Nous sommes toujours ravis de vous aider.</p>
-                    </td>
-                </tr>
+
                 <tr>
                     <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                         <p style="margin: 0;">A votre santé,<br>Cedric Akrou</p>
@@ -193,20 +156,8 @@
             </table>
         </td>
     </tr>
-    <tr>
-        <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
-            <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-                <tr>
-                    <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;"> <br>
-                        <p style="margin: 0;">Si ces e-mails deviennent ennuyeux, n'hésitez pas à
-                            <a th:href="${unsubscribe_link}" target="_blank" style="color: #111111; font-weight: 700;">
-                                A vous désabonner</a>.
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
+
+
 </table>
 </body>
 
