--- a/src/main/resources/templates/backend/artisan/announcements.html
+++ b/src/main/resources/templates/backend/artisan/announcements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="fragments/fragment_head('Management artisans')" />
+<th:block th:replace="fragments/fragment_head('Annonces')" />
 
 <body>
 <div class="wrapper">
