Finsih login and sign-up design

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -51,7 +51,7 @@
 
                                 <div class="pull-left">
                                     <h6>
-                                        <a th:href="@{/account/sign-up}" class="link footer-link">Creer un compte</a>
+                                        <a th:href="@{/account/sign-up}" class="link footer-link">Creer un compte ( Prestataire de service ) </a>
                                     </h6>
                                 </div>
 
