--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,43 +1,84 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="fragments/fragment_head('Login page')" />
+<th:block th:replace="fragments/fragment_head('Créer un compte')" />
 
+<body class="signup-page sidebar-collapse">
 
-<body class="user-profile">
-<div class="wrapper ">
-    <div class="sidebar" data-color="transparent">
-        <!--
-          Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
-      -->
-
-    </div>
-    <div class="main-panel" id="main-panel">
-
-        <div class="panel-header panel-header-sm">
+<nav class="navbar navbar-expand-lg bg-white navbar-absolute navbar-transparent">
+    <div class="container">
+        <div class="collapse navbar-collapse" data-nav-image="../assets/img//blurred-image-1.jpg" data-color="orange">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link btn btn-primary" th:href="@{/account/login}" href="https://www.creative-tim.com/product/now-ui-kit-pro">
+                        <p>Se connecter</p>
+                    </a>
+                </li>
+            </ul>
         </div>
+    </div>
+</nav>
 
-
-        <div class="content">
-
+<div class="page-header header-filter" filter-color="black">
+    <div class="page-header-image" style="background-image:url(../assets/img/bg18.jpg)"></div>
+    <div class="content">
+        <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="title">Création de compte</h5>
+                <div class="col-md-3 ml-auto mr-auto">
+                    <div class="info info-horizontal">
+                        <div class="icon icon-primary">
+                            <i class="now-ui-icons media-2_sound-wave"></i>
                         </div>
+                        <div class="description">
+                            <h5 class="info-title">Visibilité</h5>
+                            <p class="description">
+                                Faîtes vous connaître et ameliorez votre portfeuille client.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="info info-horizontal">
+                        <div class="icon icon-primary">
+                            <i class="now-ui-icons media-1_button-pause"></i>
+                        </div>
+                        <div class="description">
+                            <h5 class="info-title">Opportunités</h5>
+                            <p class="description">
+                                Nous vous proposons les meilleures offres selon vos specialités et votre zone géographique.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="info info-horizontal">
+                        <div class="icon icon-info">
+                            <i class="now-ui-icons users_single-02"></i>
+                        </div>
+                        <div class="description">
+                            <h5 class="info-title">Construire sa clientèle</h5>
+                            <p class="description">
+                                Nous vous mettons en contact avec des clients dont les besoins correpondantes à vos talents.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7 mr-auto">
+                    <div class="card card-signup">
                         <div class="card-body">
+                            <h4 class="card-title text-center">Créer un compte </h4>
+                            <div class="social text-center">
+                                <h5 class="card-description"> et dévénez un prestataire de services </h5>
+                            </div>
+
+
                             <form method="post" th:action="@{/account/save}" enctype="multipart/form-data" >
                                 <div class="row">
                                     <div class="col-md-6 px-1">
                                         <div class="form-group">
-                                            <label>Username</label>
+                                            <label style=" color: black; font: bold">Username</label>
                                             <input type="text" class="form-control" placeholder="Username" name="username" />
                                         </div>
                                     </div>
                                     <div class="col-md-6 pl-1">
                                         <div class="form-group">
-                                            <label >Email</label>
+                                            <label style=" color: black; font: bold">Email</label>
                                             <input type="email" class="form-control" placeholder="Email" name="email" />
                                         </div>
                                     </div>
@@ -46,13 +87,13 @@
                                 <div class="row">
                                     <div class="col-md-6 pr-1">
                                         <div class="form-group">
-                                            <label>Nom</label>
+                                            <label style=" color: black; font: bold">Nom</label>
                                             <input type="text" class="form-control" placeholder="Nom" name="firstname" />
                                         </div>
                                     </div>
                                     <div class="col-md-6 pl-1">
                                         <div class="form-group">
-                                            <label>Prenom</label>
+                                            <label style=" color: black; font: bold">Prenom</label>
                                             <input type="text" class="form-control" placeholder="lastname" name="lastname" />
                                         </div>
                                     </div>
@@ -60,14 +101,14 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>Contact</label>
+                                            <label style=" color: black; font: bold">Contact</label>
                                             <input type="text" class="form-control" placeholder="Contact" name="phone1">
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label>Autre Contact</label>
+                                            <label style=" color: black; font: bold">Autre Contact</label>
                                             <input type="text" class="form-control" placeholder="Autre contact" name="phone2">
                                         </div>
                                     </div>
@@ -75,17 +116,17 @@
                                 </div>
                                 <div class="row">
 
-                                    <div class="col-md-6 pr-1">
+                                    <div class="col-md-6 pr-1" style="display: none">
                                         <div class="form-group">
-                                            <label>Cni Recto</label>
-                                            <input type="file" class="form-control" placeholder="Cni Recto" name="cniRecto" />
+                                            <label style=" color: black; font: bold">Cni Recto</label>
+                                            <input type="file" class="form-control form-control-lg" placeholder="Cni Recto" name="cniRecto" />
                                         </div>
                                     </div>
 
-                                    <div class="col-md-6 px-1">
+                                    <div class="col-md-6 px-1" style="display: none">
                                         <div class="form-group">
-                                            <label>Cni Verso</label>
-                                            <input type="file" class="form-control" placeholder="Cni Verso" name="cniVerso" />
+                                            <label style=" color: black; font: bold">Cni Verso</label>
+                                            <input type="file" class="form-control form-control-lg" placeholder="Cni Verso" name="cniVerso" />
                                         </div>
                                     </div>
 
@@ -94,7 +135,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Biographie</label>
+                                            <label style=" color: black; font: bold">Biographie</label>
                                             <textarea rows="4" cols="80" class="form-control" placeholder="Entrez votre biographie" name="biography"></textarea>
                                         </div>
                                     </div>
@@ -103,7 +144,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Specialité</label>
+                                            <label style=" color: black; font: bold">Specialité</label>
                                             <select class="form-control" name="speciality">
                                                 <option value="-1">Veuillez choisir une specialité</option>
 
@@ -124,38 +165,21 @@
                                 </div>
 
                             </form>
+
+
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-4">
-                </div>
             </div>
-
         </div>
-
-    </div>
-</div>
-
-</body>
-
-
-<body class="login-page sidebar-collapse">
-
-<div class="page-header header-filter" filter-color="orange">
-    <div class="page-header-image" style="background-image:url(../assets/img/login.jpg)"></div>
-    <div class="content">
-
-
-
     </div>
 
 
-</div>
+    <th:block th:replace="fragments/fragment_footer :: footer" />
 
+</div>
 
 <th:block th:replace="fragments/fragment_script :: script " />
-
 
 </body>
 
